--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#2296f3" />
   <meta name="title" content="DpZ - Data Platform" />
   
-  <meta name="author" content="CodedThemes" />
+  <meta name="author" content="DPZ Team" />
  
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
